<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/hello_there_log_in_to_continue"
        android:textColor="#78909C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="145dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/welcome_back"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailLogin"
        app:layout_constraintStart_toStartOf="@+id/emailLogin" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/go_back"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_left_arrow" />

    <ImageView
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:srcCompat="@drawable/login_button" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/forgot_password"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#5E35B1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/password"
        android:fontFamily="monospace"
        android:text="@string/password"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/email"
        android:fontFamily="monospace"
        android:text="@string/email"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailLogin"
        app:layout_constraintStart_toStartOf="@+id/emailLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/log_in"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        app:layout_constraintTop_toTopOf="@+id/signupBtn"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:autofillHints=""
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/textView6"
        android:padding="15dp"
        android:textColorHint="#80000000"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/passwordLogin"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:autofillHints=""
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/textView9"
        android:padding="15dp"
        android:textColorHint="#80000000"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>