<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/few_more_steps"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintStart_toStartOf="@+id/firstname" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro_light"
        android:text="@string/enter_your_information_below"
        android:textColor="#78909C"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_left_arrow" />

    <ImageView
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login_button" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/last_name"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="@+id/lastName" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/date_of_birth"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dateOfBirth"
        app:layout_constraintStart_toStartOf="@+id/dateOfBirth" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/sex"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sex"
        app:layout_constraintStart_toStartOf="@+id/sex" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="monospace"
        android:text="@string/first_name"
        android:textColor="#78909C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstname"
        app:layout_constraintStart_toStartOf="@+id/firstname" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/continue_"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        app:layout_constraintTop_toTopOf="@+id/signupBtn"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:padding="15dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:inputType="date"
        android:padding="15dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toStartOf="@+id/sex"
        app:layout_constraintStart_toStartOf="@+id/signupBtn"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/sex"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:padding="15dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/dateOfBirth"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:background="@drawable/login_signup_gray_input_box"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        android:padding="15dp"
        android:textCursorDrawable="@drawable/edit_text_cursor"
        app:layout_constraintBottom_toTopOf="@+id/dateOfBirth"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintStart_toStartOf="@+id/dateOfBirth"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>